tests/snapshots/run_wpt_conformance__trtx_conv2d_float32_4D_both_input_and_filter_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "conv2d.https.any.js",
    "conv2d float32 4D both input and filter constant tensors default options",
    "trtx",
    "PASS",
)
