tests/snapshots/run_wpt_conformance__trtx_convTranspose2d_float16_4D_both_input_and_filter_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "conv_transpose2d.https.any.js",
    "convTranspose2d float16 4D both input and filter constant tensors default options",
    "trtx",
    "PASS",
)
